--- a/index.html
+++ b/index.html
@@ -16,10 +16,21 @@
 <body>
     <div class="wrapper">
         <div class="content">
-            
+
         </div>
         <div class="footer">
-            
+            <div class="container">
+                <div class="footer-icons">
+                    <a href="#" class="footer-icon"><img src="images/footer/vk.png" alt=""></a>
+                    <a href="#" class="footer-icon"><img src="images/footer/hz.png" alt=""></a>
+                    <a href="#" class="footer-icon"><img src="images/footer/inst.png" alt=""></a>
+                </div>
+                <ul class="footer-menu">
+                    <li class="footer-menu__item"><a href="index.html" class="footer-menu__link">Главная</a></li>
+                    <li class="footer-menu__item"><a href="#" class="footer-menu__link">О Нас</a></li>
+                    <li class="footer-menu__item"><a href="#" class="footer-menu__link">Услуги</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <script src="js/script.js"></script>
