add feedback and contacts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,46 @@
 <body>
     <div class="wrapper">
         <div class="content">
-
+            <div class="contacts">
+                <div class="container">
+                    <div class="bigTitle contacts-bigTitle">Контакты</div>
+                    <div class="text contacts-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="contacts-row">
+                        <div class="contacts-item">
+                            <img src="images/contacts/1.svg" alt="" class="contacts-item__image">
+                            <div class="contacts-item__title">Email</div>
+                            <div class="contacts-item__text">email@yoursite.com</div>
+                        </div>
+                        <div class="contacts-item">
+                            <img src="images/contacts/2.svg" alt="" class="contacts-item__image">
+                            <div class="contacts-item__title">Офис</div>
+                            <div class="contacts-item__text">Мурманск, Тарана 25</div>
+                        </div>
+                        <div class="contacts-item">
+                            <img src="images/contacts/3.svg" alt="" class="contacts-item__image">
+                            <div class="contacts-item__title">Телефон</div>
+                            <div class="contacts-item__text">+7 (911)300-77 05</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="feedback">
+                <div class="container">
+                    
+                        <div class="title feedback-title">Обратная связь</div>
+                        <div class="text feedback-text">
+                            Оставьте заявку и наш специалист свяжется с вами, чтобы обсудить <br> индивидуальный план продвижения. 
+                            Не упустите шанс стать <br> лидером в своей области!
+                        </div>
+                        <form class="feedback-form" action="#" method="post">
+                            <input placeholder="Имя" type="text" class="feedback-form__input">
+                            <input placeholder="Email" type="text" class="feedback-form__input">
+                            <input placeholder="Телефон" type="text" class="feedback-form__input">
+                            <button class="feedback-submit">ОТПРАВИТЬ</button>
+                        </form>
+                      
+                </div>
+            </div>
         </div>
         <div class="footer">
             <div class="container">
