--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 <body>
     <div class="wrapper">
         <div class="content">
+            <div class="clients">
+                <div class="container">
+                    <div class="title clients-title">Наши клиенты</div>
+                    <div class="clients-row">
+                        <img src="images/clients/1.png.png" alt="" class="client-image">
+                        <img src="images/clients/2.png.png" alt="" class="client-image">
+                        <img src="images/clients/3.png.png" alt="" class="client-image">
+                        <img src="images/clients/4.png.png" alt="" class="client-image">
+                        <img src="images/clients/2.png.png" alt="" class="client-image">
+                        <img src="images/clients/3.png.png" alt="" class="client-image">
+                    </div>
+                </div>
+            </div>
             <div class="contacts">
                 <div class="container">
                     <div class="bigTitle contacts-bigTitle">Контакты</div>
