add qstn for one

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
 <body>
     <div class="wrapper">
         <div class="content">
+            <div class="qstn">
+                <div class="container">
+                    <div class="title qstn-title">
+                        Часто задаваемые вопросы
+                    </div>
+                    <div class="qstn-items">
+                        <div class="qstn-item">
+                            <div class="qstn-item__row">
+                                <div class="text qstn-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <img src="images/qstn/arr.svg" alt="" class="qstn-item__arrow">
+                            </div>
+                            <div class="text qstn-item__text">
+                                Наше агентство предоставляет широкий спектр маркетинговых услуг. Мы специализируемся на
+                                контекстной рекламе, рекламе в мессенджерах, продвижении товаров на маркетплейсах, а также
+                                ведению рекламных компаний в социальных сетях.
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
             <div class="clients">
                 <div class="container">
                     <div class="title clients-title">Наши клиенты</div>
