--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
 <body>
     <div class="wrapper">
         <div class="content">
+            <div class="header">
+                <div class="header-container">
+                    <div class="header-row">
+                        <div class="header-logo">
+                            <a href="index.html"><img src="images/header/logo.png" alt=""></a>
+                        </div>
+                            <ul class="header-menu">
+                                <li class="header-menu__item"><a class="header-menu__link" href="">Главная</a></li>
+                                <li class="header-menu__item"><a class="header-menu__link" href="">О Нас</a></li>
+                                <li class="header-menu__item"><a class="header-menu__link" href="">Услуги</a></li>
+                            </ul>
+                        <div class="header-number"><a class="header-number__link" href="">+7 (911) 300 77 05</a></div>
+                        <div class="header-soc">
+                                <a class="header-soc__item" href=""><img src="images/header/vk.png" alt=""></a>
+                                <a class="header-soc__item" href=""><img src="images/header/dzen.png" alt=""></a>
+                                <a class="header-soc__item" href=""><img src="images/header/inst.png" alt=""></a>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="first">
+                <div class="container">
+                    <div class="first-subtitle">Маркетинговое агентство</div>
+                    <div class="first-row">
+                            <div class="first-left">Цифровые возможности</div>
+                            <div class="first-right">На перекрестке технологии и креатива, мы реализуем решения, которые вызывают восхищение и приносят доход</div>
+                    </div>
+                   <div class="fisrt-btn"><a class="fisrt-btn__link" href="">ПОДРОБНЕЕ</a></div>
+                </div>
+            </div>
             <div class="clients">
                 <div class="container">
                     <div class="title clients-title">Наши клиенты</div>
