add script quest

--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
                    <div class="fisrt-btn"><a class="fisrt-btn__link" href="">ПОДРОБНЕЕ</a></div>
                 </div>
             </div>
+            <div class="quest">
+                <div class="container">
+                    <div class="title quest-title">Часто задаваемые вопросы</div>
+                    <div class="quest-items">
+                        <div class="quest-item">
+                            <div class="quest-item__row">
+                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
+                            </div>
+                            <div class="text quest-item__text">
+                               КЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУН
+                               КЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУН
+                            </div>
+                        </div>
+                        <div class="quest-item">
+                            <div class="quest-item__row">
+                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
+                            </div>
+                            <div class="text quest-item__text">
+                                ДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИК
+                                ДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИК
+                            </div>
+                        </div>
+                        <div class="quest-item">
+                            <div class="quest-item__row">
+                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
+                            </div>
+                            <div class="text quest-item__text">
+                                БЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙ
+                                БЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙ
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="clients">
                 <div class="container">
                     <div class="title clients-title">Наши клиенты</div>
