add script for quest

--- a/index.html
+++ b/index.html
@@ -51,33 +51,40 @@
                     <div class="title quest-title">Часто задаваемые вопросы</div>
                     <div class="quest-items">
                         <div class="quest-item">
+                                <div class="quest-item__row">
+                                    <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                    <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
+                                </div>
+                                <div class="text quest-item__text">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque laboriosam voluptates quisquam reiciendis.
+                                    Placeat magni amet sequi? Eveniet ab sequi, illo incidunt quasi ipsam placeat quam ipsa consectetur commodi voluptate?
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi necessitatibus, dolorem blanditiis placeat aliquid tempora velit
+                                     dignissimos repudiandae vitae mollitia voluptatum, odit doloremque at. Repudiandae deleniti nam perferendis itaque pariatur.
+                                </div>
+                            
+                        </div>
+                        <div class="quest-item">
                             <div class="quest-item__row">
-                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <div class="text quest-item__question">Что такое SEO и почему это важно для бизнеса?</div>
                                 <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
                             </div>
                             <div class="text quest-item__text">
-                               КЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУН
-                               КЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУН
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque laboriosam voluptates quisquam reiciendis.
+                                 Placeat magni amet sequi? Eveniet ab sequi, illo incidunt quasi ipsam placeat quam ipsa consectetur commodi voluptate?
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi necessitatibus, dolorem blanditiis placeat aliquid tempora velit
+                                  dignissimos repudiandae vitae mollitia voluptatum, odit doloremque at. Repudiandae deleniti nam perferendis itaque pariatur.
                             </div>
                         </div>
                         <div class="quest-item">
                             <div class="quest-item__row">
-                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <div class="text quest-item__question">Сколько будет стоить создание сайта для моего бизнеса?</div>
                                 <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
                             </div>
                             <div class="text quest-item__text">
-                                ДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИК
-                                ДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИКДОЛБАРИК
-                            </div>
-                        </div>
-                        <div class="quest-item">
-                            <div class="quest-item__row">
-                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
-                                <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
-                            </div>
-                            <div class="text quest-item__text">
-                                БЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙ
-                                БЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙБЕСПОЛЕЗНЫЙ
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque laboriosam voluptates quisquam reiciendis.
+                                 Placeat magni amet sequi? Eveniet ab sequi, illo incidunt quasi ipsam placeat quam ipsa consectetur commodi voluptate?
+                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi necessitatibus, dolorem blanditiis placeat aliquid tempora velit
+                                  dignissimos repudiandae vitae mollitia voluptatum, odit doloremque at. Repudiandae deleniti nam perferendis itaque pariatur.
                             </div>
                         </div>
                     </div>
