--- a/index.html
+++ b/index.html
@@ -55,14 +55,11 @@
                                 <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
                                 <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
                             </div>
-                            <div class="text quest-item__text">
-                               КЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУН
-                               КЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУНКЛОУН
-                            </div>
+                            <div class="text quest-item__text"></div>
                         </div>
                         <div class="quest-item">
                             <div class="quest-item__row">
-                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <div class="text quest-item__question">Как?</div>
                                 <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
                             </div>
                             <div class="text quest-item__text">
@@ -72,7 +69,7 @@
                         </div>
                         <div class="quest-item">
                             <div class="quest-item__row">
-                                <div class="text quest-item__question">Какие услуги по маркетингу ваше агентство предоставляет?</div>
+                                <div class="text quest-item__question">Где?</div>
                                 <img src="images/question/Icon.png" alt="" class="quest-item__arrow">
                             </div>
                             <div class="text quest-item__text">
