--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
                    <div class="fisrt-btn"><a class="fisrt-btn__link" href="">ПОДРОБНЕЕ</a></div>
                 </div>
             </div>
+            <div class="podhod">
+                <div class="container">
+                    <div class="text podhod-about">О нас</div>
+                    <div class="podhod-row">
+                        <div class="podhod-left">
+                            <div class="title podhod-left__title">
+                                Инновационный <br> Подход
+                            </div>
+                            <div class="text podhod-left__text">
+                                В эпоху цифровой трансформации наш <br> маркетинговый агентство
+                                 гордится своим умением <br> сочетать креативные решения с передовыми <br> технологиями
+                            </div>
+                        </div>
+                        <div class="podhod-right">
+                            <div class="text podhod-right__analiz">
+                                Стратегия и Анализ:
+                                
+                            </div>
+                            <div class="podhod-right__polosa"><div class="podhod-right__polosaActive"></div></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="guard">
+                <div class="container">
+                    <div class="guard-row">
+                        <div class="guard-item">
+                            <img src="images/guard/features1.jpg.png" alt="" class="guard-image">
+                            <div class="text guard-text">Безопасность и конфедициальность</div>
+                        </div>
+                        <div class="guard-item">
+                            <img src="images/guard/features3.jpg.png" alt="" class="guard-image">
+                            <div class="text guard-text">Надежность и ответственность</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="quest">
                 <div class="container">
                     <div class="title quest-title">Часто задаваемые вопросы</div>
