--- a/index.html
+++ b/index.html
@@ -60,11 +60,27 @@
                             </div>
                         </div>
                         <div class="podhod-right">
-                            <div class="text podhod-right__analiz">
-                                Стратегия и Анализ:
-                                
+                            <div class="podhod-right__item">
+                                <div class="podhod-right__top">
+                                    <div class="text podhod-right-top__left">Стратегия и Анализ:</div>
+                                    <div class="text podhod-right-top__right">92%</div>
+                                </div>
+                                <div class="podhod-right__polosa"><div class="podhod-right__polosaActive"></div></div>
                             </div>
-                            <div class="podhod-right__polosa"><div class="podhod-right__polosaActive"></div></div>
+                            <div class="podhod-right__item">
+                                <div class="podhod-right__top">
+                                    <div class="text podhod-right-top__left ">Контент и Реклама</div>
+                                    <div class="text podhod-right-top__right">71%</div>
+                                </div>
+                                <div class="podhod-right__polosa"><div class="podhod-right__polosaActive reklama-active"></div></div>
+                            </div>
+                            <div class="podhod-right__item">
+                                <div class="podhod-right__top">
+                                    <div class="text podhod-right-top__left">SEO и Оптимизация</div>
+                                    <div class="text podhod-right-top__right">53%</div>
+                                </div>
+                                <div class="podhod-right__polosa"><div class="podhod-right__polosaActive SEO-active"></div></div>
+                            </div>
                         </div>
                     </div>
                 </div>
