--- a/index.html
+++ b/index.html
@@ -46,6 +46,71 @@
                    <div class="fisrt-btn"><a class="fisrt-btn__link" href="">ПОДРОБНЕЕ</a></div>
                 </div>
             </div>
+            <div class="team">
+                <div class="container">
+                    <div class="title team-title">Наша команда</div>
+                    <div class="team-items">
+                        <div class="team-item">
+
+                            <div class="team-item__top">
+                                <div class="team-item__left">
+                                    <img src="images/team/team3.jpg.png" alt="" class="team-item-left__image">
+                                    <div class="team-item-left__info">
+                                        <div class="subtitle team-item-left-info__subtitle">Кубраков Егор</div>
+                                        <div class="text team-item-left-info__text">Web разоработчик</div>
+                                    </div>
+                                </div>
+                                <img src="images/team/Icon.svg" alt="" class="team-item__right">
+                            </div>
+                            <div class="text team-item__bottom">
+                                Специалист в области веб-разработки. Его опыт включает в себя создание адаптивных и высокопроизводительных сайтов, 
+                                интеграцию с различными платформами и системами управления контентом.
+                                 Он всегда следит за новыми тенденциями и технологиями, чтобы предоставлять клиентам современные и эффективные решения.
+                            </div>
+
+                        </div>
+                        <div class="team-item">
+
+                            <div class="team-item__top">
+                                <div class="team-item__left">
+                                    <img src="images/team/team3.jpg.png" alt="" class="team-item-left__image">
+                                    <div class="team-item-left__info">
+                                        <div class="subtitle team-item-left-info__subtitle">Кубракова Анастасия</div>
+                                        <div class="text team-item-left-info__text">Дизайнер , Видеограф</div>
+                                    </div>
+                                </div>
+                                <img src="images/team/Icon.svg" alt="" class="team-item__right">
+                            </div>
+                            <div class="text team-item__bottom">
+                                Настоящий профессионал в сфере дизайна и видеографии. Ее портфолио включает в себя стильные и продуманные графические решения для различных медиапроектов.
+                                 Кроме того, Анастасия создает качественные видеоматериалы,
+                                 которые помогают брендам выделяться и взаимодействовать с их аудиторией на новом уровне.
+                            </div>
+
+                        </div>
+                        <div class="team-item">
+
+                            <div class="team-item__top">
+                                <div class="team-item__left">
+                                    <img src="images/team/team3.jpg.png" alt="" class="team-item-left__image">
+                                    <div class="team-item-left__info">
+                                        <div class="subtitle team-item-left-info__subtitle">Иванов Сергей</div>
+                                        <div class="text team-item-left-info__text">SEO специалист</div>
+                                    </div>
+                                </div>
+                                <img src="images/team/Icon.svg" alt="" class="team-item__right">
+                            </div>
+                            <div class="text team-item__bottom">
+                                Эксперт по оптимизации сайтов для поисковых систем. С его помощью ваш сайт будет занимать верхние позиции в результатах поиска, 
+                                что гарантирует увеличение трафика и конверсии. 
+                                Он профессионально подходит к анализу ключевых слов, оптимизации контента и построению качественной ссылочной массы.
+                            </div>
+
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
             <div class="podhod">
                 <div class="container">
                     <div class="text podhod-about">О нас</div>
